moved images to asset path helper

--- a/lib/rollout_ui/engine/app/assets/stylesheets/rollout_ui/layout.css.scss
+++ b/lib/rollout_ui/engine/app/assets/stylesheets/rollout_ui/layout.css.scss
@@ -1,6 +1,6 @@
 body {
   font-family: Helvetica, sans-serif;
-  background: #232323 url(/assets/rollout_ui/dark_brick_wall.png);
+  background: #232323 image-url("rollout_ui/dark_brick_wall.png");
   color: #aeaeae;
 }
 
