--- a/lib/rollout_ui/engine/app/assets/stylesheets/rollout_ui/layout.css.scss
+++ b/lib/rollout_ui/engine/app/assets/stylesheets/rollout_ui/layout.css.scss
@@ -1,6 +1,6 @@
 body {
   font-family: Helvetica, sans-serif;
-  background: #232323 url(asset-path("rollout_ui/dark_brick_wall.png", image));
+  background: #232323 image-url('rollout_ui/dark_brick_wall.png');
   color: #aeaeae;
 }
 
